--- a/package.json
+++ b/package.json
@@ -9,13 +9,14 @@
     "typecheck": "react-router typegen && tsc"
   },
   "dependencies": {
+    "@amcharts/amcharts5": "^5.12.1",
     "@react-router/node": "^7.5.1",
     "@react-router/serve": "^7.5.1",
     "isbot": "^5.1.17",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-icons": "^5.5.0",
     "react-router": "7.5.1",
-    "recharts": "^2.15.3",
     "test": "file:"
   },
   "devDependencies": {
